<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="pe.edu.tecsup.activities.MainActivity">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/login" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/error_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:text="@string/main_error"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/main_margin_bottom"
                android:textStyle="bold"
                android:text="@string/main_user"
                android:textSize="@dimen/text_size" />


            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:layout_marginBottom="@dimen/main_margin_bottom" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginBottom="@dimen/main_margin_bottom"
                android:text="@string/main_password" />


            <EditText
                android:id="@+id/password_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:layout_marginBottom="@dimen/main_margin_bottom"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:background="@drawable/main_button"
                android:text="@string/main_button"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>